[gd_scene load_steps=12 format=3 uid="uid://dijqafw0r6cuc"]

[ext_resource type="Script" path="res://addons/rad_menu/radial_menu_button.gd" id="1_i1eh8"]
[ext_resource type="Texture2D" uid="uid://dd0l7anwt58uq" path="res://addons/rad_menu/button basis.png" id="1_kbsut"]
[ext_resource type="Texture2D" uid="uid://btspqryro2ifl" path="res://addons/rad_menu/sp star.png" id="2_wj5g4"]
[ext_resource type="FontFile" uid="uid://c1w83040xbexq" path="res://addons/atkinson/Aladin-Regular.ttf" id="3_ara64"]
[ext_resource type="AudioStream" uid="uid://c3teo7tmmqe4p" path="res://addons/atkinson/button_woosh_stream.tres" id="5_6jtqr"]
[ext_resource type="AudioStream" uid="uid://b511aquxc6aa7" path="res://addons/atkinson/Get_Orb_01.wav" id="8_jcx2k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uvluv"]

[sub_resource type="Animation" id="Animation_rrfv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sp_position:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, -74)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sp_position/sprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sp_position/sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2w5d7"]
resource_name = "dim"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9, 0.9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9, 0.9, 0.9, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sp_position:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(34.4444, -33.3333)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sp_position/sprite:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.213219]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sp_position/sprite:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.8, 0.8, 0.8, 1)]
}

[sub_resource type="Animation" id="Animation_bkl16"]
resource_name = "gleam"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sp_position:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, -56)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sp_position/sprite:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sp_position/sprite:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vnu64"]
_data = {
"RESET": SubResource("Animation_rrfv6"),
"dim": SubResource("Animation_2w5d7"),
"gleam": SubResource("Animation_bkl16")
}

[node name="radial_menu_button" type="Node2D"]
script = ExtResource("1_i1eh8")

[node name="tex" type="Sprite2D" parent="."]
texture = ExtResource("1_kbsut")

[node name="Button" type="Button" parent="."]
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_uvluv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uvluv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uvluv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_uvluv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uvluv")
flat = true

[node name="sp_position" type="Marker2D" parent="."]
visible = false
position = Vector2(72, -74)

[node name="sprite" type="Sprite2D" parent="sp_position"]
texture = ExtResource("2_wj5g4")

[node name="cost" type="Label" parent="sp_position"]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 16
theme_override_constants/shadow_outline_size = 14
theme_override_fonts/font = ExtResource("3_ara64")
theme_override_font_sizes/font_size = 70
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.1
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_vnu64")
}

[node name="select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_6jtqr")
volume_db = -10.0
bus = &"effects"

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_jcx2k")

[connection signal="focus_entered" from="Button" to="." method="_set_button_hilight"]
[connection signal="focus_exited" from="Button" to="." method="_set_button_hilight"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_event"]
[connection signal="mouse_entered" from="Button" to="." method="_set_button_hilight"]
[connection signal="mouse_exited" from="Button" to="." method="_set_button_hilight"]
